# token-proxy

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/application/: access_point_management.rs  config_service.rs  log_service.rs  mod.rs  proxy_service.rs  service_management.rs
src-tauri/src/domain/: access_point.rs  api_service.rs  app_config.rs  mod.rs  proxy_log.rs
src-tauri/src/infrastructure/: mod.rs  sanitize.rs
src-tauri/src/infrastructure/persistence/: mod.rs  sqlite_repository.rs  yaml_config.rs
src-tauri/src/infrastructure/proxy/: logger.rs  mod.rs  proxy_server.rs  request_handler.rs
src-tauri/src/interface/: commands.rs
src/components/: AccessPointModal.tsx  Layout.tsx  ServiceModal.tsx  Sidebar.tsx  StatusBar.tsx  TitleBar.tsx
src/hooks/: useApiData.ts
src/pages/: AccessPointsPage.tsx  LogsPage.tsx  ServicesPage.tsx  SettingsPage.tsx
src/services/: access-point.ts  api-service.ts  config.ts  index.ts  proxy-log.ts
src/types/: access-point.ts  api-service.ts  config.ts  index.ts  proxy-log.ts
src/utils/: error.ts  sanitize.ts  theme.ts
